fix(watchlist): async trigger & batch realtime lookup, websocket auth and event parsing improvements